readme update; code cleaning