@@ -1,1 +1,5 @@
 # chungtoi
+
+#java --add-modules java.xml.ws chungtoi.ChungTWSclient
+
+#java --add-modules java.xml.ws chungtoi.ChungServerPublisher
